# flox-manifest-build-examples

./: .gitignore  Makefile  README.md  test.sh
.github/workflows/: build-and-test.yml
quotes-app-cpp/: .gitignore  Makefile
quotes-app-cpp/.flox/env/: manifest.toml
quotes-app-cpp/.flox/pkgs/: quotes-app-cpp-nix.nix
quotes-app-go/: .gitignore  Makefile  main.go
quotes-app-go/.flox/env/: manifest.toml
quotes-app-jvm/: Makefile
quotes-app-jvm/.flox/env/: manifest.toml
quotes-app-nodejs/: Makefile  app.js  package.json  rollup.config.js
quotes-app-nodejs/.flox/env/: manifest.toml
quotes-app-nodejs/.flox/pkgs/quotes-app-nodejs-nix/: default.nix
quotes-app-php/: Makefile
quotes-app-php/.flox/env/: manifest.toml
quotes-app-php/.flox/pkgs/quotes-app-php-nix/: default.nix
quotes-app-pip/: MANIFEST.in  Makefile  pyproject.toml
quotes-app-pip/.flox/: env.json
quotes-app-pip/.flox/env/: manifest.toml
quotes-app-pip/.flox/pkgs/quotes-app-pip-nix/: default.nix
quotes-app-pip/quotes_app_python/: main.py
quotes-app-python/: .gitignore  Makefile  pyproject.toml
quotes-app-python/.flox/: env.json
quotes-app-python/.flox/env/: manifest.toml
quotes-app-rb/: .gitignore  Makefile  app.rb  quotes
quotes-app-rb/.flox/env/: manifest.toml
quotes-app-rs/: Makefile
quotes-app-rs/.flox/env/: manifest.toml
