[project]
name = "quotes_app_pip"
version = "0.1.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)"
]
requires-python = ">=3.12"

[project.scripts]
quotes-app-pip = "quotes_app_python.main:main"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

# Necessary for including the JSON file as specified by MANIFEST.in
[tool.setuptools]
include-package-data = true
