[project]
name = "quotes_app_python"
version = "0.1.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)"
]

# https://github.com/flox/flox/issues/3202
[tool.poetry.dependencies]
python = ">=3.12"

[tool.poetry.scripts]
quotes-app-python = "quotes_app_python.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
